--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "netlify-cli": "^12.2.7",
-    "nuxt": "3.0.0"
+    "nuxt": "3.0.0",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "daisyui": "^2.42.1"
   }
 }
