--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
-    "daisyui": "^2.42.1"
+    "daisyui": "^2.42.1",
+    "sqlite3": "^5.1.2"
   }
 }
